--- a/vit-student-app/app.json
+++ b/vit-student-app/app.json
@@ -16,8 +16,8 @@
     // ↓ Update this section:
     "androidNavigationBar": {
       "visible": true,
-      "backgroundColor": "#121212",    // dark shade behind Home/Recents/Back
-      "barStyle": "light-content"      // makes the system icons white
+      "backgroundColor": "#ffffff",
+      "barStyle": "dark-content"
     },
     "plugins": ["expo-media-library", "expo-camera"],
 
