--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     implementation 'androidx.compose.foundation:foundation'
+    implementation 'androidx.compose.ui:ui-text-google-fonts:1.5.4'
+    implementation 'com.google.android.gms:play-services-base:18.4.0'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.material:material-icons-extended'
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
